cmake_minimum_required(VERSION 3.15)
project(lsmtree)

set(CMAKE_CXX_STANDARD 17)
include_directories(${CMAKE_SOURCE_DIR}/include)
if (CMAKE_BUILD_TYPE STREQUAL Debug)
    set(CMAKE_CXX_FLAGS "-stdlib=libc++ -fstandalone-debug")
elseif (CMAKE_BUILD_TYPE STREQUAL Release)
    set(CMAKE_CXX_FLAGS "-stdlib=libc++ -O2")
endif ()
find_library(ZLIB z)
add_library(MurmurHash bloom_filter/MurmurHash.cpp)
add_library(MemTable memtable/MemTable.cpp)
add_library(LSMTree lsmtree/LSMTree.cpp)
add_library(DiskTable disktable/DiskTable.cpp)
add_library(SSTable disktable/sstable/SSTable.cpp)
add_library(KVStore kvstore.cc)
link_libraries(KVStore LSMTree MemTable DiskTable SSTable MurmurHash)
if (ZLIB)
    add_compile_definitions(WITH_GZIP)
    link_libraries(${ZLIB})
endif ()

add_executable(lsmtree main.cpp)
add_executable(fs_test filesystem_test.cpp)
add_executable(tests tests.cpp)
add_executable(correctness correctness.cc)
add_executable(persistent persistence.cc)
add_executable(gzip_test gzip_test.cpp)
add_executable(perf_test perf_tests.cpp)